@@ -1,3 +1,4 @@
+* BUG#385 Bloquer la possibilité de pouvoir supprimer un avenant qui a été appliqué
 * BUG#6003 Remplace désormais la version de l'option du contrat si sa date d'effet est identique à la version précédente de l'option de contrat
 * FEA#7077 Ajouter des avenants préconfiguré
 * BUG#7120 Suppression de l'initialisation de la raison de résiliation dans l'avenant de modification de garantie
